# netbox-sd-access

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: .bashrc  Dockerfile-plugin_dev  devcontainer.json  docker-compose.override.yml  entrypoint-dev.sh
.devcontainer/configuration/: plugins.py
.devcontainer/env/: netbox.env
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
netbox_sd_access/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_sd_access/api/: serializers.py  urls.py  views.py
netbox_sd_access/graphql/: __init__.py  filters.py  schema.py  types.py
netbox_sd_access/migrations/: 0001_initial.py  0002_fabricsite.py  0003_ippool.py  0003_iptransit_sdatransit.py  0003_remove_fabricsite_devices_sdadevice.py  0003_sdadevicerole.py  0003_virtualnetwork.py  0004_alter_fabricsite_ip_prefixes.py  0004_sdadevice_comments_alter_sdadevice_device.py  0004_sdatransit_comments.py  0005_merge_20240718_1903.py  0006_merge_20240719_1535.py  0007_alter_sdatransit_devices_and_more.py  0008_alter_sdatransit_control_plane_node.py  0009_virtualnetwork.py  0010_alter_virtualnetwork_vrf.py  0011_fabricsite_netbox_sd_access_fabric_site_unique_name_and_more.py  0012_fabricsite_comments.py  0013_ippool_comments.py  0014_delete_sdaccess.py
search/: search_index.json
tests/: __init__.py  test_netbox_sd_access.py
(+14 files in other folders)
